# find-political-donors

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac  run.sh
insight_testsuite/temp/src/: Makefile.am  main.cpp  running_median_by_date_calculator.h
src/: FecFileParser.cpp  FecFileParser.h  Makefile.am  date.cpp  date.h  fec_file_parser.cpp  fec_file_parser.h  main.cpp  running_median_by_date_calculator.cpp  running_median_by_zip_calculator.cpp  running_median_by_zip_calculator.h
src/unittests/: FecFileParserTester.cpp  Makefile.am  fec_file_parser_test.cpp  main.cpp  running_median_by_date_calculator_test.cpp  running_median_by_zip_calculator_test.cpp
